@@ -1,5 +1,7 @@
 2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* flower/file-name.cc (slashify): use std strings.
+
 	* flower/string-convert.cc: remove publib.h
 
 	* scm/define-markup-commands.scm (verbatim-file): new markup
